# template-python-cli

./: .gitignore  NOTES.md  README.md  TEMPLATE.md  mypy.ini  pyproject.toml
src/template_python_cli/cli/: __init__.py
