[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-python-cli"
dynamic = ["version"]
description = "Opinionated Python template for new CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "João Palmeiro", email = "joaopalmeiro@proton.me" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
]
dependencies = ["click>=8.1.0"]

[project.urls]
Issues = "https://github.com/joaopalmeiro/template-python-cli/issues"
Source = "https://github.com/joaopalmeiro/template-python-cli"

[project.scripts]
template-python-cli = "template_python_cli.cli:main"

[tool.hatch.version]
path = "src/template_python_cli/__init__.py"

[tool.hatch.envs.qa]
detached = false
installer = "uv"
dependencies = ["ruff==0.5.6", "mypy==1.11.1"]

[tool.hatch.envs.qa.scripts]
lint = ["- ruff check", "mypy"]
format = ["- ruff check --fix", "ruff format"]

[tool.hatch.build]
packages = ["src/template_python_cli"]
